--- a/cibaa/2p.html
+++ b/cibaa/2p.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <title> Shiba  </title></head>
 <meta charset='utf-8'>
 <style>
 .clear{
@@ -160,7 +161,7 @@ body{
       <ul id='main_menu'>
          <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
       <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="https://namu.wiki/w/%EC%8B%9C%EB%B0%94%EA%B2%AC" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
