--- a/cibaa/1p.html
+++ b/cibaa/1p.html
@@ -145,8 +145,6 @@ body{
   .r{color:#ff2121; font-weight: bold;}
  .b{color:#131313; font-weight: bold;}
  .t{color:#e1711e; font-weight: bold;}
-  .p{color:#ff89ad; font-weight: bold;}
-  .p2{color:#ffc8d9; font-weight: bold;}
 </style>
 </head>
 <body>
@@ -165,14 +163,24 @@ body{
       </ul>
    </nav>
 </header>
+<section id='main_img'>
 
+
+</section>   
 <section id='contents'>
+      <nav id='sub_menu'>
+      <h3>그 외</h3>
+   </nav>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
+         <img src='C:\ciba/22323.jpg'>
       </div>
-<h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
-<p>그냥 시바견이 귀여워서 만들었습니다.</p>
+      <h3><span class='r'>★</span><span class='d'>★</span><span class='t'>★</span><span class='y'>★</span>시바견<span class='y'>★</span><span class='t'>★</span><span class='d'>★</span><span class='r'>★</span></h3>
+      <h4>柴犬(しばいぬ / しばけん)/ Shiba inu</h4>
+      <p><b>세모꼴의 동양적 눈매를 가진 일본의 천연기념물</b></p>
+      <p>일본산의 견종으로 일본에서 가장 많이 기른다는 견종 6종의 일본 전통 견종 중 <b>약80%가 시바견</b> 이다.<br>
+   시바이누를 포함한 총 6경종 (아키타견, 카이켄견, 기슈견, 시코쿠견, 홋카이도견)으로<br>
+   시바이누는 일본고유견 중에서 유일한 소형견이다.</p>
 
 </section>
 <div class='clear'></div> <!-- float 속성 해제 -->
