--- a/cibaa/2-2p.html
+++ b/cibaa/2-2p.html
@@ -138,15 +138,15 @@ body{
 }
 
  .c{color:#e4b952; font-weight: bold;}
- .y{color:#fff000; font-weight: bold;}
+ .y{color:#fffc00; font-weight: bold;}
  .d{color:#ff644f; font-weight: bold;}
  .n{color:#ffb24f; font-weight: bold;}
  .m{color:#ae4fff; font-weight: bold;}
   .r{color:#ff2121; font-weight: bold;}
  .b{color:#131313; font-weight: bold;}
  .t{color:#e1711e; font-weight: bold;}
-  .p{color:#ff89ad; font-weight: bold;}
-  .p2{color:#ffc8d9; font-weight: bold;}
+
+
 </style>
 </head>
 <body>
@@ -165,15 +165,39 @@ body{
       </ul>
    </nav>
 </header>
+<section id='main_img'>
 
+</section>   
 <section id='contents'>
+   <nav id='sub_menu'>
+      <h3>성격 및 특징</h3>
+     <ul>
+            <li><a href="file:///C:/ciba/2p.html" target="_blank">성격 및 특징</a></li>
+         <li><a href="file:///C:/ciba/2-1p.html" target="_blank">얼굴형</a></li>
+         <li><a href="file:///C:/ciba/2-2p.html" target="_blank">색상</a></li>
+      </ul>
+   </nav>
    <div id='main_contents'>
-            <div>
-         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
-      </div>
-<h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
-<p>그냥 시바견이 귀여워서 만들었습니다.</p>
+<h2> <span class='y'>★</span> 1. 시바견의 다양한 색 !! <span class='y'>★</span></h2>
+<h2><img src='C:\시바굔/274F014354439BEB04.jpg' width="45%"></h2>
+<h2> <span class='r'>레드</span></h2>
+<p> 시바견을 떠올리면 가장 먼저 떠오르는 <span class='r'>컬러</span>!!<br>
+   <b>시바의 80%를 차지</b>하는 대표적인 색상으로 얼굴밑이나 복부,가슴등에 흰털을 가지고 있는 것이 특징이다.
+   <br>적시바끼리의 교배만 계속 될 경우 모색이 흐려지기때문에<br> 브리딩시 블랙시바와 함께 교배하는 경우가 있다.</p><br><br>
 
+<h2><img src='C:\시바굔/2154093E573294C907.jpg' width="45%"></h2>
+<h2> <span class='b'>블랙탄</span></h2>
+<p> 야성미가 넘치는 외모로 최근 많은 인기를 얻고있는 <b>컬러</b>다!<br> <b>시바견에서 전체의 10%정도</b> 밖에 태어날 수 없다고 알려져 있다.</p><br><br>
+
+<h2><img src='C:\시바굔/14272169_291836444532628_34595385_n.jpg' width="45%"></h2>
+<h2> <span class='t'>참깨</span></h2>
+<p> 가장 희소성이 높은 컬러이다! <br> 레드.블랙.흰색 이 적당히 섞인 색상이 특징으로 레드의 비율이 높으면 <span class='r'>붉은참깨</span>, 검은 비율이 높으면 <span class='b'>검은깨</span> 라고 한다.<br>의도적으로 늘리는 것이 어려운 색상으로 <br> 어렸을때 참깨색이였던 아이도 성견이 됨에 따라 적색 또는 흑생으로 변할 수 있다.</p><br><br>
+
+<h2><img src='C:\시바굔/6848767dde2a633cf40fff39def72b46.jpg' width="45%"></h2>
+<h2>화이트</h2>
+<p> 올 화이트인 아이부터 귀 앞이나 일부 붉은 색이 들어간 아이, <br> 크림의 아이까지 화이트의 가까운 컬러의 아이를 백시바로 구분한다. </p><br><br>
+
+<p>출처 : [각종 네이버 블로그]</p>
 </section>
 <div class='clear'></div> <!-- float 속성 해제 -->
 <footer>
