--- a/cibaa/3p.html
+++ b/cibaa/3p.html
@@ -145,8 +145,6 @@ body{
   .r{color:#ff2121; font-weight: bold;}
  .b{color:#131313; font-weight: bold;}
  .t{color:#e1711e; font-weight: bold;}
-  .p{color:#ff89ad; font-weight: bold;}
-  .p2{color:#ffc8d9; font-weight: bold;}
 </style>
 </head>
 <body>
@@ -165,14 +163,20 @@ body{
       </ul>
    </nav>
 </header>
+<section id='main_img'>
 
+
+</section>   
 <section id='contents'>
+      <nav id='sub_menu'>
+      <h3>그 외</h3>
+   </nav>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
+         <img src='C:\ciba/c5ca8f6ff450e292fc5fc0ea71f611e4.jpg'>
       </div>
-<h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
-<p>그냥 시바견이 귀여워서 만들었습니다.</p>
+      <h3>귀여운 외모만 봐서는 분양하지마세요.</h3>
+      <p>죄없는 애들만 유기견됩니다.</p>
 
 </section>
 <div class='clear'></div> <!-- float 속성 해제 -->
