--- a/index.html.html
+++ b/index.html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title> Shiba  </title></head>
+   <title> Shibaa  </title></head>
 <meta charset='utf-8'>
 <style>
 .clear{
