--- a/cibaa/1p.html
+++ b/cibaa/1p.html
@@ -157,7 +157,7 @@ body{
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html" target="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
       <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
       <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
