--- a/cibaa/2p.html
+++ b/cibaa/2p.html
@@ -159,9 +159,9 @@ body{
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
-      <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html" target="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
@@ -172,7 +172,7 @@ body{
    <nav id='sub_menu'>
       <h3>성격 및 특징</h3>
          <ul>
-            <li><a href="file:///C:/ciba/2p.html" target="_blank">성격 및 특징</a></li>
+            <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target="_blank">성격 및 특징</a></li>
          <li><a href="file:///C:/ciba/2-1p.html" target="_blank">얼굴형</a></li>
          <li><a href="file:///C:/ciba/2-2p.html" target="_blank">색상</a></li>
       </ul>
@@ -180,7 +180,7 @@ body{
    <div id='main_contents'>
       <h3><span class='y'>★</span> 시바견 성격&특징 <span class='y'>★</span></h3>
             <div>
-         <img src='C:\ciba/08-3.jpg' width="30%">
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/08-3.jpg' width="30%">
       </div>
   <p> 민첩하고 재빠른 이들은 주인과의 달리기를 매우 좋아한다.<br>"시바를 결코 따라 잡을 수는 없다"는 말이 있으므로 끈을 매어서 데리고 달리는 것이 좋다.<br> 이들은 깔끔한 면에서는 고양이 같고 낯선 사람에게는 쌀쌀한 북방견의 기질을 가지고 있으며, 독립적 성격을 타고 나므로 경비견으로 좋다.<br> 가족들과는 잘 지내지만 때론 다른 개들과 싸우기를 좋아한다. 앞으로 이 개를 구입할 사람들은 시바의 성격을 이해하고, 한마리를 완전히 소유하기 전에 길들일 준비가 되어 있어야 한다.<br> 이들은 크기에 비해 기운차고 강인하여 아이들의 좋은 놀이 상대가 된다.</p>
   <p>그리고 다른 강아지와는 다르게 <b>엄살이 엄청 많고,이중모라 물에 적시기 힘들고 <a href="https://www.youtube.com/watch?v=a9b6pTI739E" target="_blank">털이 엄~~~~~~~~청 빠진다.</a></b><br>
