--- a/cibaa/3p.html
+++ b/cibaa/3p.html
@@ -150,16 +150,16 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
-      <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
@@ -173,7 +173,7 @@ body{
    </nav>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/c5ca8f6ff450e292fc5fc0ea71f611e4.jpg'>
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/c5ca8f6ff450e292fc5fc0ea71f611e4.jpg'>
       </div>
       <h3>귀여운 외모만 봐서는 분양하지마세요.</h3>
       <p>죄없는 애들만 유기견됩니다.</p>
