--- a/cibaa/2-1p.html
+++ b/cibaa/2-1p.html
@@ -152,16 +152,16 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
-      <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html" target="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-3.png'></a></li>
       </ul>
    </nav>
 </header>
@@ -172,27 +172,27 @@ body{
    <nav id='sub_menu'>
       <h3>성격 및 특징</h3>
      <ul>
-            <li><a href="file:///C:/ciba/2p.html" target="_blank">성격 및 특징</a></li>
-         <li><a href="file:///C:/ciba/2-1p.html" target="_blank">얼굴형</a></li>
-         <li><a href="file:///C:/ciba/2-2p.html" target="_blank">색상</a></li>
+            <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target="_blank">성격 및 특징</a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1p.html" target="_blank">얼굴형</a></li>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2p.html" target="_blank">색상</a></li>
       </ul>
    </nav>
    <div id='main_contents'>
       <h3><span class='y'>★</span><b>시바견 얼굴형</b> <span class='y'>★</span></h3>
             <div>
-         <img src='C:\ciba/019.jpg'>
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/019.jpg'>
       </div>
   <p>보통은 키 35 - 41cm, 무게 7 - 14kg의 중소형견인 시바견은 얼굴형과 사이즈에 따라 조금 다르다. 얼굴형 중에는 <br> <b>여우형</b> <b>너구리형</b>그리고 체격이 가장 작은 <b>미메시바(콩시바) 총 3가지 종류로 나뉜다.<br><br>
 
-   <h2><img src='C:\ciba/19302ead.jpg' width="45%"></h2>
+   <h2><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/19302ead.jpg' width="45%"></h2>
 <h2> <span class='d'>여우형 얼굴 <br>(縄文柴犬:죠몬시바)</span></h2>
 <p> 여우형 얼굴은 죠몬시바 라고도 불리며 <br><b>갸름하고 호리호리한 얼굴에 날씬한 체형</b>을 하고있는 것이 특징이다. <br> 의외로 너구리형 시바견에 비해 전체적으로 조금 큰 편이다.<br> 성견의 몸무게는 일반적으로 (수)10-13kg , (암)9-11kg이다.</p> <br><br>
 
-<h2><img src='C:\ciba/9964CA365ABC6D1D10.jpg' width="45%"></h2>
+<h2><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/9964CA365ABC6D1D10.jpg' width="45%"></h2>
 <h2> <span class='n'>너구리형 얼굴 <br>(信州柴犬:신슈시바)</span></h2>
 <p> 너구리형 얼굴은 가장 흔한 시바견이고,<b>둥그런 얼굴과 근육질로 골격이 확고한 체형</b>을 하고있는 것이 특징이다.<br> 성견의 몸무게는 일반적으로 (수)9-11kg , (암)7-9kg이다.</p> <br><br>
 
-<h2><img src='C:\ciba/DJOgYX9VwAEhiTN.jpg' width="45%"></h2>
+<h2><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/DJOgYX9VwAEhiTN.jpg' width="45%"></h2>
 <h2> <span class='m'>마메시바 <br>(豆柴:콩시바)</span></h2>
 <p> 마메시바는 <b>소형의 시바견을 교배시켜 개량한 견종</b>으로 일반적으로 다른 시바견과 형통적인 차이는 없다.<br>최근에는 마메시바 보다 더 작은 사이즈의 시바견이 늘어나는 추세로 小豆柴(팥시바) 極小豆柴(극팥시바)등으로 불리고 있다.<br> 성견의 몸무게는 일반적으로 4-6kg이다.</p> <br><br>
 
