--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@ body{
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href='file://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html='_blank'> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
-      <li><a href='file://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
-      <li><a href='file://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
+         <li><a href='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html='_blank'> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
