--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body{
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <a href='1p.html'><li><img src="dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png"></li></a>
+         <a href='1p.html'><li><img src="2-2.png"></li></a>
       <li><a href='https://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
       <li><a href='https://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
