--- a/cibaa/index.html
+++ b/cibaa/index.html
@@ -152,16 +152,16 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
-      <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+         <a href='1p.html'><li><img src="cibaa/2-2.png"></li></a>
+      <li><a href='https://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href='https://dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html='_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
@@ -169,7 +169,7 @@ body{
 <section id='contents'>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/22568144571329B419.jpg' width = "100%">
       </div>
 <h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
 <p>그냥 시바견이 귀여워서 만들었습니다.</p>
