--- a/cibaa/index.html
+++ b/cibaa/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -152,24 +153,24 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
+      <img src=C:\ciba/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <a href='1p.html'><li><img src="cibaa/2-1.png"></li></a>
-         <a href='2p.html'><li><img src="cibaa/2-2.png"></li></a>
-         <a href='3p.html'><li><img src="cibaa/2-5.png"></li></a>
-         </ul>
+         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html" target"_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target"_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html" target"_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
+      </ul>
    </nav>
 </header>
 
 <section id='contents'>
    <div id='main_contents'>
             <div>
-         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/22568144571329B419.jpg' width = "100%">
+         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
       </div>
 <h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
 <p>그냥 시바견이 귀여워서 만들었습니다.</p>
