--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
@@ -170,7 +170,7 @@ body{
 <section id='contents'>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/22568144571329B419.jpg' width = "100%">
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/22568144571329B419.jpg' width = "100%">
       </div>
 <h1><span class='p'>♥</span><span class='p2'>♥</span>시바견은 귀엽고 귀엽고 귀엽습니다.<span class='p2'>♥</span><span class='p'>♥</span></h1>
 <p>그냥 시바견이 귀여워서 만들었습니다.</p>
