--- a/cibaa/2p.html
+++ b/cibaa/2p.html
@@ -152,17 +152,17 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html" target="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
-      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
-      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html" target="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
-      </ul>
+         <li><a href='1p.html' target'_blank'> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href='2p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href='3p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
+         </ul>
    </nav>
 </header>
 <section id='main_img'>
