--- a/cibaa/3p.html
+++ b/cibaa/3p.html
@@ -157,10 +157,10 @@ body{
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/1p.html="_blank"> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
-      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
-      <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/3p.html="_blank"><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
-      </ul>
+        <li><a href='1p.html' target'_blank'> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href='2p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href='3p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
+         </ul>
    </nav>
 </header>
 <section id='main_img'>
