--- a/1p.html
+++ b/1p.html
@@ -134,9 +134,7 @@ footer{
 }
 body{
    background-color: #ffdec6;
-
 }
-
  .c{color:#e4b952; font-weight: bold;}
  .y{color:#fff000; font-weight: bold;}
  .d{color:#ff644f; font-weight: bold;}
@@ -150,16 +148,16 @@ body{
 <body>
 <header>
       <div id=logo>
-      <img src=C:\ciba/123.jpg>
+      <img src=dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/123.jpg>
       </div>
       <nav id='menus'>
          <div id=top_menu>
          로그인 ㅣ 회원가입 ㅣ 시바시바r
       </div>
       <ul id='main_menu'>
-         <li><a href="file:///C:/ciba/1p.html" target="_blank"> <img src='C:\ciba/2-1.png'></a></li>
-      <li><a href="file:///C:/ciba/2p.html" target="_blank"><img src='C:\ciba/2-2.png'></a></li>
-      <li><a href="file:///C:/ciba/3p.html" target="_blank"><img src='C:\ciba/2-5.png'></a></li>
+         <li><a href='1p.html' target'_blank'> <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1.png'></a></li>
+      <li><a href='2p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2.png'></a></li>
+      <li><a href='3p.html' target'_blank'><img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-5.png'></a></li>
       </ul>
    </nav>
 </header>
@@ -173,7 +171,7 @@ body{
    </nav>
    <div id='main_contents'>
             <div>
-         <img src='C:\ciba/22323.jpg'>
+         <img src='dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/22323.jpg'>
       </div>
       <h3><span class='r'>★</span><span class='d'>★</span><span class='t'>★</span><span class='y'>★</span>시바견<span class='y'>★</span><span class='t'>★</span><span class='d'>★</span><span class='r'>★</span></h3>
       <h4>柴犬(しばいぬ / しばけん)/ Shiba inu</h4>
