--- a/2-1p.html
+++ b/2-1p.html
@@ -168,9 +168,9 @@ body{
    <nav id='sub_menu'>
       <h3>성격 및 특징</h3>
      <ul>
-            <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2p.html" target="_blank">성격 및 특징</a></li>
-         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-1p.html" target="_blank">얼굴형</a></li>
-         <li><a href="file:///dlfmawjdgkrlglaemsptlqkf.github.io/cibaa/2-2p.html" target="_blank">색상</a></li>
+              <li><a href='2p.html' target'_blank'>성격 및 특징</a></li>
+         <li><a href='2-1p.html' target'_blank'">얼굴형</a></li>
+         <li><a href='2-2p.html' target'_blank'>색상</a></li>
       </ul>
    </nav>
    <div id='main_contents'>
